@@ -19,7 +19,6 @@ import org.elasticsearch.client.Request;
 import org.elasticsearch.client.Response;
 import org.elasticsearch.client.RestClient;
 import org.elasticsearch.client.RestClientBuilder;
-import org.jboss.logging.Logger;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -33,11 +32,10 @@ import io.hyperfoil.tools.horreum.api.data.datastore.ElasticsearchDatastoreConfi
 import io.hyperfoil.tools.horreum.api.data.datastore.auth.APIKeyAuth;
 import io.hyperfoil.tools.horreum.api.data.datastore.auth.UsernamePassAuth;
 import io.hyperfoil.tools.horreum.entity.backend.DatastoreConfigDAO;
+import io.quarkus.logging.Log;
 
 @ApplicationScoped
 public class ElasticsearchDatastore implements Datastore {
-
-    protected static final Logger log = Logger.getLogger(ElasticsearchDatastore.class);
 
     @Inject
     ObjectMapper mapper;
@@ -52,9 +50,8 @@ public class ElasticsearchDatastore implements Datastore {
         RestClient restClient = null;
 
         try {
-
             if (metaData != null) {
-                log.warn("Empty request: " + metaData.toString());
+                Log.warnf("Empty request: %s", metaData);
                 throw new BadRequestException("Empty request: " + metaData);
             }
             metaData = payload;
@@ -91,7 +88,7 @@ public class ElasticsearchDatastore implements Datastore {
                 restClient = builder.build();
 
                 if (restClient == null) {
-                    log.warn("Could not find elasticsearch datastore: " + configuration.name);
+                    Log.warnf("Could not find elasticsearch datastore: %s", configuration.name);
                     throw new BadRequestException("Could not find elasticsearch datastore: " + configuration.name);
                 }
 
@@ -99,8 +96,8 @@ public class ElasticsearchDatastore implements Datastore {
                 try {
                     apiRequest = mapper.treeToValue(payload, ElasticRequest.class);
                 } catch (JsonProcessingException e) {
-                    String msg = String.format("Could not parse request: %s, %s", metaData.toString(), e.getMessage());
-                    log.warn(msg);
+                    String msg = "Could not parse request: %s, %s".formatted(metaData, e.getMessage());
+                    Log.warn(msg);
                     throw new BadRequestException(msg);
                 }
 
@@ -119,9 +116,8 @@ public class ElasticsearchDatastore implements Datastore {
                         try {
                             finalString = extracted(restClient, request);
                         } catch (IOException e) {
-                            String msg = String.format("Could not query doc request: %s, %s", metaData.toString(),
-                                    e.getMessage());
-                            log.warn(msg);
+                            String msg = "Could not query doc request: %s, %s".formatted(metaData, e.getMessage());
+                            Log.warn(msg);
                             throw new BadRequestException(msg);
                         }
 
@@ -190,17 +186,15 @@ public class ElasticsearchDatastore implements Datastore {
                                 } catch (IOException e) {
 
                                     docString.replaceAll("ERR_MSG", e.getMessage());
-                                    String msg = String.format("Could not query doc request: index: %s; docID: %s (%s)",
-                                            multiIndexQuery.targetIndex, multiIndexQuery.docField, e.getMessage());
-                                    log.error(msg);
+                                    Log.error("Could not query doc request: index: %s; docID: %s (%s)".formatted(
+                                            multiIndexQuery.targetIndex, multiIndexQuery.docField, e.getMessage()));
                                 }
 
                                 try {
                                     result.put("$doc", mapper.readTree(docString));
                                 } catch (JsonProcessingException e) {
                                     docString.replaceAll("ERR_MSG", e.getMessage());
-                                    String msg = String.format("Could not parse doc result: %s, %s", docString, e.getMessage());
-                                    log.error(msg);
+                                    Log.error("Could not parse doc result: %s, %s".formatted(docString, e.getMessage()));
                                 }
 
                                 extractedResults.add(result);
@@ -227,7 +221,7 @@ public class ElasticsearchDatastore implements Datastore {
                 try {
                     restClient.close();
                 } catch (IOException e) {
-                    log.errorf("Error closing rest client: %s", e.getMessage());
+                    Log.errorf("Error closing rest client: %s", e.getMessage());
                 }
             }
         }
